bad/return_class_side_in_func_returning_class.example_compiler_output
ERROR
[1mbad/return_class_side_in_func_returning_class.lat:5:19: [1;31merror: [0;1mreturned value of type `Z` is not convertible to return type `Y`[m
Y test() { return new Z; }
                  [1;32m^[m
